[gd_scene load_steps=20 format=2]

[ext_resource path="res://images/entities/door/door0.png" type="Texture" id=1]
[ext_resource path="res://images/entities/door/door6.png" type="Texture" id=2]
[ext_resource path="res://images/entities/door/door8.png" type="Texture" id=3]
[ext_resource path="res://images/entities/door/door7.png" type="Texture" id=4]
[ext_resource path="res://images/entities/door/door10.png" type="Texture" id=5]
[ext_resource path="res://images/entities/door/door11.png" type="Texture" id=6]
[ext_resource path="res://images/entities/door/door13.png" type="Texture" id=7]
[ext_resource path="res://images/entities/door/door1.png" type="Texture" id=8]
[ext_resource path="res://images/entities/door/door12.png" type="Texture" id=9]
[ext_resource path="res://images/entities/door/door4.png" type="Texture" id=10]
[ext_resource path="res://images/entities/door/door5.png" type="Texture" id=11]
[ext_resource path="res://images/entities/door/door2.png" type="Texture" id=12]
[ext_resource path="res://images/entities/door/door9.png" type="Texture" id=13]
[ext_resource path="res://images/entities/door/door3.png" type="Texture" id=14]
[ext_resource path="res://images/environment/wall_panel_border.png" type="Texture" id=15]
[ext_resource path="res://scripts/entities/Door.gd" type="Script" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": false,
"name": "opening",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 8 ), ExtResource( 1 ) ],
"loop": false,
"name": "closing",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 4 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -32, -8, -32, 8, 32, 8, 32, -8 )

[node name="Door" type="Node2D"]
script = ExtResource( 16 )

[node name="Door" type="AnimatedSprite" parent="."]
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 4, 4 )
z_index = -1
z_as_relative = false
frames = SubResource( 1 )
animation = "closing"
frame = 13

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 48 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 4, -8.00001 )
polygon = PoolVector2Array( -4, -8, -4, 24, 124, 24, 124, -8 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 4, -168 )
polygon = PoolVector2Array( -4, -8, -4, 24, 124, 24, 124, -8 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -60 )
shape = SubResource( 2 )

[node name="wall_panel_border" type="Sprite" parent="."]
position = Vector2( -32, -96 )
scale = Vector2( 2, 2 )
z_index = 2
z_as_relative = false
texture = ExtResource( 15 )

[node name="wall_panel_border2" type="Sprite" parent="."]
position = Vector2( 32, -96 )
scale = Vector2( 2, 2 )
z_index = 2
z_as_relative = false
texture = ExtResource( 15 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = -2147483647
position = Vector2( 0, -80 )
scale = Vector2( 2, 2 )
occluder = SubResource( 3 )
light_mask = -2147483647
[connection signal="animation_finished" from="Door" to="." method="_on_Door_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
